--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -75,7 +75,7 @@ nav {
     }
 
     ul li.active a {
-        background-color: lighten($menuColor, 20%);
+        background-color: lighten(grey, 1%);
     }
 }
 
@@ -122,7 +122,7 @@ main {
         color: #eee;
         font-size: 3rem;
         text-decoration: none;
-        background-color: $accentColor;
+        background-color: $primaryColor;
     }
 
     div.flexsocial a:hover {
